HOME_PAGE: NH Logo -> fix jump until image is loaded. Add new asset

--- a/source/styles/core/_mixins.scss
+++ b/source/styles/core/_mixins.scss
@@ -758,6 +758,10 @@ $icon100offsetX: 0px;
     left: 0;
     right: 0;
     bottom: 0;
+    img {
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
