--- a/source/styles/views/_home.scss
+++ b/source/styles/views/_home.scss
@@ -28,14 +28,21 @@
 							left: 0;
 							transform: translateY(-50%);
 
-							img {
-								position: relative;
-								display: block;
-								width: 40%;
-								height: auto;
-								margin: 0 auto;
-								margin-bottom: 20px;
+							.nhbrand-wrapper {
+								width: 80%;
+								max-width: 210px;
+								margin: 0 auto 30px;
+								@include aspect-ratio(210, 103)
 							}
+
+							// img {
+							// 	position: relative;
+							// 	display: block;
+							// 	width: 40%;
+							// 	height: auto;
+							// 	margin: 0 auto;
+							// 	margin-bottom: 20px;
+							// }
 						}
 					}
 				}
